# git-http-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  cosign.pub  docker-compose.yml
.github/workflows/: docker-publish.yml  lint.yml  rust-ci.yml
crates/repomng/: Cargo.toml
crates/repomng/src/: main.rs  repository.rs
etc/: gitweb.conf
etc/nginx/conf.d/: default.conf
scripts/: entrypoint.sh
