[package]
name = "repomng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4.3.0", features = ["derive", "env"] }
eyre = "0.6.8"
git2 = "0.17.1"
hyper = "0.14.26"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
