[package]
name = "repomng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", default-features = false, features = ["http1", "json", "tokio"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
eyre = "0.6.9"
git2 = "0.18.1"
hyper = "0.14.27"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
